--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,16 @@
-<mat-toolbar color="primary">
+<!-- <mat-toolbar color="primary">
   <span>{{ title }}</span>
 </mat-toolbar>
 
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
+
+<span>{{ title }}</span>
+<mat-toolbar color="primary">
+  <span>{{title}}</span>
+  <a mat-button routerLink="/users">Users</a>
+</mat-toolbar>
+
+<main class="main-content">
+  
+  <router-outlet></router-outlet>
+</main>
