--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -1,14 +1,22 @@
-@use '@angular/material' as mat; // Повинно бути на самому початку
+@use '@angular/material' as mat;
 
-// Ваші налаштування теми
-$primary: mat.define-palette(mat.$indigo-palette);
-$accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$theme: mat.define-light-theme((
+@include mat.core();
+
+// Define your custom palettes
+$my-app-primary: mat.define-palette(mat.$indigo-palette);
+$my-app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$my-app-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object
+$my-app-theme: mat.define-light-theme((
   color: (
-    primary: $primary,
-    accent: $accent,
-  )
+    primary: $my-app-primary,
+    accent: $my-app-accent,
+    warn: $my-app-warn,
+  ),
+  typography: mat.define-typography-config(),
+  density: 0
 ));
 
-// Застосування теми
-@include mat.all-component-themes($theme);
+// Apply the theme
+@include mat.all-component-themes($my-app-theme);
