--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -1,22 +1,21 @@
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 
 @include mat.core();
 
-// Define your custom palettes
 $my-app-primary: mat.define-palette(mat.$indigo-palette);
 $my-app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 $my-app-warn: mat.define-palette(mat.$red-palette);
 
-// Create the theme object
-$my-app-theme: mat.define-light-theme((
-  color: (
-    primary: $my-app-primary,
-    accent: $my-app-accent,
-    warn: $my-app-warn,
-  ),
-  typography: mat.define-typography-config(),
-  density: 0
-));
+$my-app-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $my-app-primary,
+      accent: $my-app-accent,
+      warn: $my-app-warn,
+    ),
+    typography: mat.define-typography-config(),
+    density: 0,
+  )
+);
 
-// Apply the theme
 @include mat.all-component-themes($my-app-theme);
